      but it is strongly recommended that you use jTDS instead. To do this,
      change the values "JdbcDriver" and "JdbcUrl" in "server.properties" to "net.sourceforge.jtds.jdbc.Driver" and
      "jdbc:jtds:sqlserver://{host}:{port}/;AppName=imCMS;DatabaseName={databasename}" respectively,
      substituting correct values for "{host}", "{port}", and "{databasename}". (Bug 1850)
      
    Of interest to API-using developers:

    * Added classes:
        - Role - Represents a user-role.
        - SaveException - Thrown when something can't be saved.
    * Changed classes:
        - MaxCategoriesOfTypeExceededException - Extends SaveException
        - CategoryAlreadyExistsException - Extends SaveException
        - CategoryTypeAlreadyExistsException - Extends SaveException
    * Added methods:
        - User.getRoles() - Get the user's roles.
        - User.setRoles(Role[]) - Set the user's roles.
        - User.hasRole(Role) - Returns true if the user has the role.
        - User.addRole(Role) - Add a role to the user.
        - User.removeRole(Role) - Remove a role from the user.
        - UserService.deleteRole(Role) - Delete a role, requires superadmin permission.
        - UserService.getAllRoles() - Returns all roles in the system, requires superadmin permission.
        - UserService.getAllUsersWithRole(Role) - Get all users with the given permission.
        - UserService.getRole(int) - Get a role by id, requires superadmin permission.
        - UserService.getRole(String) - Get a role by name, requires superadmin permission.
        - UserService.saveRole(Role) - Save changes to the role, requires superadmin permission.
        - UserService.createNewUser(String, String) - Create a new user.
        - UserService.saveUser(User) - Save a new or existing user, requires superadmin permission.
        - User.set* - Added a bunch of setters.
        - User.get* - Added a few missing setters.
    * Changed methods: